# color-Fi

./: .gitignore  README.md  requirements.txt  setup.cfg
src/ColorFi/: color_fi.py
