[metadata]
name = Color-Fi
version = 1.0.0
author = John J Kenny
author_email = johnjkenny88@gmail.com
description = Color-Fi is a tool to color and format strings in python.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/johnjkenny/color-Fi
project_urls =
    Bug Tracker = https://github.com/johnjkenny/color-Fi/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:

[options.packages.find]
where = src
